# SuffixTreePA2

./: CMakeLists.txt  README.md  main.cpp  performance_metrics.txt
ParseFasta/: CMakeLists.txt
ParseFasta/include/: parse.h
ParseFasta/src/: parse.cpp
SuffixTree/: CMakeLists.txt
SuffixTree/include/: node.h  tree.h
SuffixTree/src/: node.cpp  tree.cpp  tree_priv.cpp  tree_pub.cpp
TestData/: Covid_Brazil.fasta.BWT.out  Covid_India.fasta.BWT.out  Covid_USA-CA4.fasta.BWT.out  Opsin1_colorblindness_gene.fasta
Tests/: CMakeLists.txt  test.cpp
Tests/TestData/: Covid_Wuhan.fasta.BWT.out
Tests/TestData2/: MERS_2012_KF600620.fasta
alignment/: CMakeLists.txt
alignment/include/: align.h
alignment/src/: align.cpp  align_impl.cpp
output/: RealWorldInput_1_Opsin1_colorblindness.txt.txt  RealWorldInput_2_Yeast'sChromosome12.txt.txt
report/: Covid_Wuhan.txt  Covid_australia.txt  Covid_brazil.txt  Covid_india.txt  covid_USA.txt  human-BRCA2-cds.txt  s1.txt  s2.txt  slyco.txt
scripts/: build_run.ps1  build_run.sh  build_run_tests.ps1  build_run_tests.sh
